<resources>
    <string name="app_name">Product Farm Manager</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="Paagain">Again</string>
    <string name="email">Email</string>
    <string name="pass">Pass</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">UserName</string>
    <string name="confir_mail" translatable="false">We use your email and mobile number to sent you ride confirmations and receipts</string>
    <string name="title_item_list" translatable="false">Items</string>
    <string name="title_item_detail" translatable="false">Item Detail</string>
    <string name="title_activity_list_product" translatable="false">ListProductActivity</string>
    <string name="action_settings">Settings</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="login">Login</string>
    <string name="NameT">Name Type</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="take">Take photo</string>
    <string name="chosse" translatable="false">Chosse</string>
    <string name="Chosse">Chosse........</string>
    <string name="Namepr">Name Product </string>
    <string name="count">Count </string>
    <string name="price">Price </string>
    <string name="add">Add</string>
    <string name="IDpr">ID Product:</string>
    <string name="type">Type:</string>
    <string name="navigation_drawer_open" translatable="false">navigation_drawer_open</string>
    <string name="navigation_drawer_close" translatable="false">navigation_drawer_close</string>
    <string name="ID">ID</string>
    <string name="type1">Type</string>
    <string name="product">Product</string>
    <string name="About">About</string>
</resources>
